--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,7 +41,7 @@ hr {
   background-color: black;
   height: 30px;
   cursor: default;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", serif;
 
   a {
     display: flex;
@@ -74,8 +74,19 @@ hr {
   }
 }
 
-span {
+.btn-github {
   position: fixed;
-  bottom: 0;
+  bottom: 4px;
   left: 4px;
+
+  button {
+    font-size: 14px;
+    background-color: black;
+    color: wheat;
+    border: none;
+    font-family: "Franklin Gothic Medium", serif;
+    cursor: pointer;
+    padding: 0 5px;
+    border-radius: 3px;
+  }
 }
