--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,9 +9,11 @@ body {
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
 }
+
 body::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
 }
+
 html {
   scrollbar-width: none; /* Firefox */
 }
@@ -74,7 +76,7 @@ hr {
   }
 }
 
-.btn-github {
+.link-github {
   position: fixed;
   bottom: 4px;
   left: 4px;
