--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 
 body {
   background-image: url(../localhost_1234.png);
+  background-size: cover;
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   scrollbar-width: none; /* Firefox */
 }
@@ -18,18 +19,23 @@ html {
   scrollbar-width: none; /* Firefox */
 }
 
-hr {
-  display: block;
-  unicode-bidi: initial;
+.line {
   margin-block-start: 0;
   margin-block-end: 0;
   margin-inline-start: 0;
   margin-inline-end: 0;
-  overflow: hidden;
-  border-style: solid;
-  border-width: 0;
-  border-bottom: 10px solid black;
+  width: 100%;
+  height: 30px;
   margin: -0.5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: sans-serif;
+  font-weight: 900;
+
+  @media (max-width: 200px) {
+    font-size: 13px;
+  }
 }
 
 .quote {
