--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,7 +26,7 @@ html {
   margin-inline-end: 0;
   width: 100%;
   height: 30px;
-  margin: -0.5px;
+  margin: 0;
   display: flex;
   align-items: center;
   justify-content: center;
