--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,8 @@ body {
   scrollbar-width: none; /* Firefox */
 }
 
+@import url("https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap");
+
 body::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
 }
@@ -33,7 +35,7 @@ html {
   font-family: sans-serif;
   font-weight: 900;
 
-  @media (max-width: 200px) {
+  @media (max-width: 210px) {
     font-size: 13px;
   }
 }
@@ -44,41 +46,36 @@ html {
   display: flex;
   width: 100%;
   align-items: center;
-  font-size: 20px;
-  justify-content: center;
+  font-size: 18px;
   background-color: black;
   height: 30px;
   cursor: default;
   font-family: "Franklin Gothic Medium", serif;
+  white-space: nowrap;
+  overflow: hidden;
 
-  a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  p {
     text-decoration: none;
     color: wheat;
+    display: inline-block;
+    padding-left: 100%;
+    animation: marquee 35s linear infinite;
+  }
+
+  @keyframes marquee {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(-103%, 0);
+    }
   }
 
   @media (max-width: 350px) {
     font-size: 14px;
   }
   @media (max-width: 210px) {
-    font-size: 10px;
-  }
-  img {
-    width: 20px;
-    height: auto;
-
-    &:hover {
-      width: 22;
-    }
-
-    @media (max-width: 350px) {
-      width: 14px;
-    }
-    @media (max-width: 210px) {
-      width: 10px;
-    }
+    font-size: 13px;
   }
 }
 
@@ -88,7 +85,7 @@ html {
   left: 4px;
 
   button {
-    font-size: 14px;
+    font-size: 16px;
     background-color: black;
     color: wheat;
     border: none;
@@ -96,5 +93,68 @@ html {
     cursor: pointer;
     padding: 0 5px;
     border-radius: 3px;
+  }
+}
+
+h1 {
+  font-family: "Luckiest Guy", "Franklin Gothic Medium", serif;
+  margin: 0;
+  font-size: 6rem;
+  padding: 0;
+  color: white;
+  text-shadow: 0 0.1em 20px rgba(0, 0, 0, 1), 0.05em -0.03em 0 rgba(0, 0, 0, 1),
+    0.05em 0.005em 0 rgba(0, 0, 0, 1), 0em 0.08em 0 rgba(0, 0, 0, 1),
+    0.05em 0.08em 0 rgba(0, 0, 0, 1), 0px -0.03em 0 rgba(0, 0, 0, 1),
+    -0.03em -0.03em 0 rgba(0, 0, 0, 1), -0.03em 0.08em 0 rgba(0, 0, 0, 1),
+    -0.03em 0 0 rgba(0, 0, 0, 1);
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 100%;
+  padding: 3rem 0;
+  transition: all 1s;
+
+  @media (max-width: 800px) {
+    font-size: 4rem;
+  }
+
+  @media (max-width: 550px) {
+    font-size: 3.5rem;
+  }
+
+  span {
+    transform: scale(0.9);
+    display: inline-block;
+  }
+  span:first-child {
+    animation: bop 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards infinite
+      alternate;
+  }
+  span:last-child {
+    animation: bopB 1s 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards
+      infinite alternate;
+  }
+}
+
+@keyframes bop {
+  0% {
+    transform: scale(0.9);
+  }
+  50%,
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes bopB {
+  0% {
+    transform: scale(0.9);
+  }
+  80%,
+  100% {
+    transform: scale(1) rotateZ(-3deg);
   }
 }
