--- a/scss/main.scss
+++ b/scss/main.scss
@@ -111,7 +111,7 @@ html {
 h1 {
   font-family: "Luckiest Guy", "Franklin Gothic Medium", serif;
   margin: 0;
-  font-size: 6rem;
+  font-size: 7rem;
   padding: 0;
   color: white;
   text-shadow: 0 0.1em 20px rgba(0, 0, 0, 1), 0.05em -0.03em 0 rgba(0, 0, 0, 1),
@@ -129,12 +129,20 @@ h1 {
   padding: 3rem 0;
   transition: all 1s 1s;
 
+  @media (max-width: 1000px) {
+    font-size: 6rem;
+  }
+
   @media (max-width: 800px) {
     font-size: 4rem;
   }
 
   @media (max-width: 550px) {
     font-size: 3.5rem;
+  }
+
+  @media (max-width: 250px) {
+    font-size: 1.5rem;
   }
 
   span {
