--- a/scss/main.scss
+++ b/scss/main.scss
@@ -128,6 +128,7 @@ h1 {
   width: 100%;
   padding: 3rem 0;
   transition: all 1s 1s;
+  font-weight: 100;
 
   @media (max-width: 1000px) {
     font-size: 6rem;
